--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@figurl/spike-sorting-views",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -29,12 +29,16 @@
     "react": ">= 18.0.0"
   },
   "dependencies": {
-    "@figurl/interface": "magland/figurl-interface.git#0.1.1",
-    "@figurl/core-components": "https://github.com/magland/figurl-core-components/releases/download/0.1.3/figurl-core-components-v0.1.2.tgz",
+    "@figurl/core-components": "https://github.com/magland/figurl-core-components/releases/download/0.1.4/figurl-core-components-v0.1.4.tgz",
+    "@figurl/interface": "https://github.com/magland/figurl-interface/releases/download/0.1.3/figurl-interface-v0.1.3.tgz",
     "@types/node": "^18.7.18",
     "assert": "npm:assert-browserify",
     "buffer": "npm:buffer-browserify",
     "crypto": "npm:crypto-browserify",
-    "react-sizeme": "^3.0.2"
+    "react-sizeme": "^3.0.2",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.2.0"
   }
 }
