--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@figurl/spike-sorting-views",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -15,7 +15,8 @@
     "copy-files": "copyfiles -u 1 src/**/*.css dist/",
     "build": "rm -rf dist && tsc && yarn copy-files",
     "prepare": "npm run build",
-    "release": "yarn build && yarn pack && gh release create $npm_package_version figurl-spike-sorting-views-v$npm_package_version.tgz"
+    "release-github": "yarn build && yarn pack && gh release create $npm_package_version figurl-spike-sorting-views-v$npm_package_version.tgz",
+    "release": "yarn build && npm publish && git tag $npm_package_version && git push --tags"
   },
   "keywords": [],
   "author": "Jeremy Magland",
@@ -29,8 +30,8 @@
     "react": ">= 18.0.0"
   },
   "dependencies": {
-    "@figurl/core-components": "https://github.com/magland/figurl-core-components/releases/download/0.1.4/figurl-core-components-v0.1.4.tgz",
-    "@figurl/interface": "https://github.com/magland/figurl-interface/releases/download/0.1.3/figurl-interface-v0.1.3.tgz",
+    "@figurl/core-components": "^0.1",
+    "@figurl/interface": "^0.1",
     "@types/node": "^18.7.18",
     "assert": "npm:assert-browserify",
     "buffer": "npm:buffer-browserify",
