--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@figurl/spike-sorting-views",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -30,7 +30,7 @@
     "react": ">= 18.0.0"
   },
   "dependencies": {
-    "@figurl/core-components": "^0.1",
+    "@figurl/core-views": "^0.1",
     "@figurl/interface": "^0.1",
     "@types/node": "^18.7.18",
     "assert": "npm:assert-browserify",
