--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@figurl/core-views": "^0.1",
     "@figurl/interface": "^0.1",
+    "@figurl/timeseries-views": "^0.1",
     "@types/node": "^18.7.18",
     "assert": "npm:assert-browserify",
     "buffer": "npm:buffer-browserify",
