--- a/package.json
+++ b/package.json
@@ -33,15 +33,15 @@
     "@figurl/core-views": "^0.1",
     "@figurl/interface": "^0.1",
     "@figurl/timeseries-views": "^0.1",
-    "@types/node": "^18.7.18",
-    "assert": "npm:assert-browserify",
-    "buffer": "npm:buffer-browserify",
-    "crypto": "npm:crypto-browserify",
-    "react-sizeme": "^3.0.2",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "github-markdown-css": "^5.1.0"
+    "@types/node": "^18.7.18",
+    "assert": "npm:assert-browserify",
+    "buffer": "npm:buffer-browserify",
+    "crypto": "npm:crypto-browserify",
+    "github-markdown-css": "^5.1.0",
+    "react-sizeme": "^3.0.2"
   }
 }
